--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^2.9.10",
     "@ignite-ui/react": "^2.2.4",
     "@next/font": "13.1.1",
+    "@prisma/client": "^4.8.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "phosphor-react": "^1.4.1",
@@ -25,9 +27,12 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
-    "eslint-plugin-react": "^7.32.0"
+    "eslint-plugin-react": "^7.32.0",
+    "nookies": "^2.5.2",
+    "prisma": "^4.8.1"
   }
 }
