--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@ignite-ui/react": "^2.2.4",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.1",
+    "@tanstack/react-query": "^4.22.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
