--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "eslint-config-next": "13.1.1",
+    "googleapis": "^110.0.0",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
     "phosphor-react": "^1.4.1",
