--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^110.0.0",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
+    "next-seo": "^5.15.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
